--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: citer
 Type: Package
-Title: Fast Agent-Based Epi Models
+Title: Boosting your R packages' citations
 Version: 0.0.9000
 Depends: R (>= 4.1.0)
 Authors@R: c(
@@ -8,7 +8,7 @@ Authors@R: c(
   email="g.vegayon@gmail.com", comment = c(ORCID = "0000-0002-3171-0844")),
   person("Centers for Disease Control and Prevention", role="fnd", comment = "Award number 1U01CK000585; 75D30121F00003"
   ))
-Description: Helper functions to boost your other R packages' citation.
+Description: Although used a core of scientific endeavors, citations of scientific software are often overlooked. This package provides tools to boost citation of R packages, making it easier for users to cite the software they use in their research.
 URL: https://github.com/UofUEpiBio/citer,
     https://uofuepibio.github.io/citer/,
 BugReports: https://github.com/UofUEpiBio/citer/issues
@@ -16,4 +16,6 @@ License: MIT + file LICENSE
 RoxygenNote: 7.3.2
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-VignetteBuilder: quarto
+Imports:
+    tools,
+    utils
