Fixing R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ export(citer_search_onLoad)
 export(citer_write_environment)
 importFrom(tools,md5sum)
 importFrom(utils,citation)
+importFrom(utils,packageVersion)
